--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -309,14 +309,45 @@ html body input:focus, html body input:hover {
   background: var(--bg);
   margin-top: 15rem;
   color: var(--white);
+  padding: 5rem 0 0;
+}
+
+.azad-footer .footer-top {
+  padding: 0 0 5rem;
+}
+
+.azad-footer .footer-top .footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.azad-footer .footer-top .footer-container .footer-widget-1, .azad-footer .footer-top .footer-container .footer-widget-2, .azad-footer .footer-top .footer-container .footer-widget-3 {
+  width: 100%;
+  text-align: left;
+}
+
+.azad-footer .footer-top .footer-container .footer-widget-1 h3, .azad-footer .footer-top .footer-container .footer-widget-2 h3, .azad-footer .footer-top .footer-container .footer-widget-3 h3 {
+  margin-bottom: 1rem;
+}
+
+.azad-footer .footer-top .footer-container .footer-widget-1 {
+  text-align: left;
+}
+
+.azad-footer .footer-top .footer-container .footer-widget-2 {
+  text-align: left;
+}
+
+.azad-footer .azad-copyright {
   padding: 1rem 0;
 }
 
-.azad-footer .footer-container {
+.azad-footer .azad-copyright .copyright-container {
   overflow: overlay;
 }
 
-.azad-footer .footer-container p {
+.azad-footer .azad-copyright .copyright-container p {
   margin: 0;
 }
 /*# sourceMappingURL=main-style.css.map */
