--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -320,6 +320,10 @@ html body input:focus, html body input:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .azad-footer .footer-top .footer-container .footer-widget-1, .azad-footer .footer-top .footer-container .footer-widget-2, .azad-footer .footer-top .footer-container .footer-widget-3 {
@@ -349,5 +353,20 @@ html body input:focus, html body input:hover {
 
 .azad-footer .azad-copyright .copyright-container p {
   margin: 0;
+}
+
+@media only screen and (max-width: 767px) {
+  .azad-footer .footer-top .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .azad-footer .footer-top .footer-container .footer-widget-2, .azad-footer .footer-top .footer-container .footer-widget-3 {
+    margin-top: 2rem;
+  }
 }
 /*# sourceMappingURL=main-style.css.map */
