--- a/assets/sass/main-style.scss
+++ b/assets/sass/main-style.scss
@@ -4,4 +4,5 @@
 @import "header/_header.scss";
 // @import "pages/_front.scss";
 // @import "pages/_about.scss";
+@import "pages/_blog.scss";
 @import "footer/_footer.scss";
