--- a/assets/sass/_globals.scss
+++ b/assets/sass/_globals.scss
@@ -20,6 +20,7 @@ html {
         .azad-container{
             width:var(--width);
             margin:0 auto;
+            overflow: overlay;
         }
         .azad-section{
             padding:var(--padding-top) 0;
