--- a/assets/sass/main-style.scss
+++ b/assets/sass/main-style.scss
@@ -5,4 +5,6 @@
 // @import "pages/_front.scss";
 // @import "pages/_about.scss";
 @import "pages/_blog.scss";
+@import "pages/_search.scss";
+@import "pages/_404.scss";
 @import "footer/_footer.scss";
