--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -175,13 +175,18 @@ html body input:focus, html body input:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 1rem 0;
 }
 
 .azad-header .header-container .logo {
   width: 100%;
   text-align: left;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .azad-header .header-container .logo h1 {
@@ -219,8 +224,32 @@ html body input:focus, html body input:hover {
 
 .azad-header .header-container .azad-nav .desktop-menus ul li a {
   color: var(--text);
-  padding: .8rem;
   display: block;
+  padding: 2rem 1rem;
+  display: block;
+  text-decoration: none;
+  position: relative;
+}
+
+.azad-header .header-container .azad-nav .desktop-menus ul li a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  right: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  -webkit-transition: all .4s;
+  transition: all .4s;
+  -webkit-transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+          transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
+  background: var(--text);
+  height: 0;
+}
+
+.azad-header .header-container .azad-nav .desktop-menus ul li a:hover:after {
+  height: 100%;
+  background: rgba(0, 186, 186, 0.1) !important;
 }
 
 .azad-header .mobile-menus {
@@ -233,6 +262,7 @@ html body input:focus, html body input:hover {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin: 1rem 0;
   }
   .azad-header .header-container .logo {
     text-align: center;
@@ -297,6 +327,7 @@ html body input:focus, html body input:hover {
     background: var(--text);
     color: var(--black);
     padding: 1rem 0;
+    marign-top: 1rem;
   }
   .azad-header .mobile-menus ul li a {
     padding: 10px 0;
@@ -311,9 +342,15 @@ html body input:focus, html body input:hover {
   padding: 5rem 0;
 }
 
-.azad-blog article {
-  background: red;
+.azad-blog .azad-content {
+  background: var(--white);
   margin-top: 1rem;
+  padding: 1rem;
+  text-align: left;
+}
+
+.azad-blog .azad-content:first-child {
+  margin-top: 0;
 }
 
 .azad-search {
@@ -376,6 +413,7 @@ html body input:focus, html body input:hover {
 
 .azad-footer .azad-copyright {
   padding: 1rem 0;
+  background: var(--text);
 }
 
 .azad-footer .azad-copyright .copyright-container {
