--- a/assets/sass/footer/_footer.scss
+++ b/assets/sass/footer/_footer.scss
@@ -25,6 +25,7 @@
     }
     .azad-copyright{
         padding: 1rem 0;
+        background:var(--text);
         .copyright-container{
             overflow:overlay;
             p{
