--- a/assets/sass/header/_header.scss
+++ b/assets/sass/header/_header.scss
@@ -9,12 +9,13 @@
     .header-container{
         display:flex;
         flex-direction:row;
-        margin: 1rem 0;
 
         .logo{
             width: 100%;
             text-align:left;
             position:relative;
+            display:flex;
+            align-items:center;
 
             h1{
                 line-height:0;
@@ -41,8 +42,30 @@
                     li{
                         a{
                             color: var(--text);
-                            padding: .8rem;
                             display: block;
+                            padding: 2rem 1rem;
+                            display: block;
+                            text-decoration: none;
+                            position:relative;
+
+                            &:after {
+                                content: '';
+                                position: absolute;
+                                width: 100%;
+                                bottom: 0;
+                                right: 0;
+                                transform: translate3d(0,0,0);
+                                transition: all .4s;
+                                transition-timing-function: cubic-bezier(.7,0,.3,1);
+                                background: var(--text);
+                                height: 0;
+                            }
+                            &:hover {
+                                &:after {
+                                    height: 100%;
+                                    background: rgba(0,186,186,0.1) !important;
+                                }                            
+                            }
                         }
                     }
                 }
@@ -58,7 +81,8 @@
 @media only screen and (max-width: 767px) {
     .azad-header{
         .header-container{
-            flex-direction:column;            
+            flex-direction:column;  
+            margin:1rem 0;          
             .logo{
                 text-align:center;
                 position:relative;
@@ -119,7 +143,8 @@
         .mobile-menus{
             background:var(--text); 
             color:var(--black);
-            padding:1rem 0;
+            padding: 1rem 0;
+            marign-top: 1rem;
             ul{
                 li{
                     a{
