--- a/assets/sass/main-style.scss
+++ b/assets/sass/main-style.scss
@@ -4,6 +4,7 @@
 @import "header/_header.scss";
 // @import "pages/_front.scss";
 // @import "pages/_about.scss";
+// @import "pages/_contact.scss";
 @import "pages/_blog.scss";
 @import "pages/_search.scss";
 @import "pages/_404.scss";
