--- a/assets/css/main-style.css
+++ b/assets/css/main-style.css
@@ -160,7 +160,6 @@ html body input:focus, html body input:hover {
 }
 
 .preloader {
-  background: red;
   position: fixed;
   top: 0;
   left: 0;
@@ -273,6 +272,12 @@ html body input:focus, html body input:hover {
   opacity: 0;
 }
 
+@media only screen and (max-width: 767px), only screen and (max-device-width: 767px) {
+  .preloader .inner .percentage {
+    font-size: 30vh;
+  }
+}
+
 .azad-header {
   border-top: 0.001rem solid var(--border-top);
   background: var(--white);
@@ -289,10 +294,13 @@ html body input:focus, html body input:hover {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .azad-header .header-container .logo {
-  width: 100%;
+  max-width: 50%;
   text-align: left;
   position: relative;
   display: -webkit-box;
@@ -316,7 +324,9 @@ html body input:focus, html body input:hover {
 }
 
 .azad-header .header-container .azad-nav {
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .azad-header .header-container .azad-nav .desktop-menus {
@@ -366,14 +376,31 @@ html body input:focus, html body input:hover {
   background: rgba(0, 186, 186, 0.1) !important;
 }
 
+.azad-header .header-container .azad-nav .azad-search-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.azad-header .header-container .azad-nav .azad-search-button .toggle {
+  border: none;
+  background: none;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.azad-header .header-container .azad-nav .azad-search-button .toggle:focus {
+  outline: none;
+}
+
 .azad-header .mobile-menus {
   display: none;
 }
 
 @media only screen and (max-width: 767px), only screen and (max-device-width: 767px) {
-  .preloader .inner .percentage {
-    font-size: 30vh;
-  }
   .azad-header .header-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -454,6 +481,36 @@ html body input:focus, html body input:hover {
   }
 }
 
+/*
+.no-js .show-no-js {
+	display: block !important;
+}
+
+.no-js .hide-no-js {
+	display: none !important;
+}
+.search-modal {
+    background: rgba(0, 0, 0, 0.2);
+    display: none;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    left: -9999rem;
+    top: 0;
+    transition: opacity 0.2s linear, left 0s 0.2s linear;
+    width: 100%;
+    z-index: 999;
+}
+.search-modal.active {
+    left: 0;
+    opacity: 1;
+    transition: opacity 0.2s linear;
+}
+.cover-modal.show-modal {
+    display: block;
+    cursor: pointer;
+}
+*/
 .azad-blog {
   background: var(--text);
   padding: 5rem 0;
