--- a/assets/sass/header/_header.scss
+++ b/assets/sass/header/_header.scss
@@ -1,101 +1,3 @@
-// PRELOADER CSS
-.preloader{
-    background:red;
-    position:fixed;
-    top:0;
-    left:0;
-    margin: auto;
-    width: 100vw;
-    height: 100vh;
-    background: #282828;
-    opacity: 1;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    transition-duration: 500ms;
-    -webkit-transition-duration: 500ms;
-    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-    -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-    z-index: 99;
-    transition-delay: 0.65s;
-}
-.preloader * {
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  transition-duration: 500ms;
-  -webkit-transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-}
-.preloader:before {
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 200px 100vh 0;
-  border-color: transparent #282828 transparent transparent;
-  position: absolute;
-  left: -200px;
-  top: 0;
-}
-.preloader:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 100vh 0 0 200px;
-  border-color: transparent transparent transparent #282828;
-  position: absolute;
-  right: -200px;
-  top: 0;
-}
-.preloader .inner {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-.preloader .inner .logo {
-  display: inline-block;
-  margin: 0;
-  animation: fadeInUp ease 0.6s;
-}
-.preloader .inner .logo img {
-  height: 50px;
-}
-.preloader .inner .percentage {
-  width: 100%;
-  font-size: 70vh;
-  line-height: 1;
-  font-weight: 800;
-  color: #fff;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  opacity: 0.05;
-  transition-delay: 0.1s;
-}
-
-.page-loaded.preloader {
-  left: calc(-100% - 200px);
-  visibility: hidden;
-}
-
-.page-loaded.preloader .logo {
-  transform: translateX(-100px);
-  opacity: 0;
-}
-
-.page-loaded.preloader .percentage {
-  margin-left: 100px;
-  opacity: 0;
-}
-
 .azad-header{
     border-top:.001rem solid var(--border-top);
     background: var(--white);
@@ -107,9 +9,10 @@
     .header-container{
         display:flex;
         flex-direction:row;
+        justify-content:space-between;
 
         .logo{
-            width: 100%;
+            max-width: 50%;
             text-align:left;
             position:relative;
             display:flex;
@@ -126,7 +29,7 @@
             }
         }
         .azad-nav{
-            width: 100%;
+            display:flex;
 
             .desktop-menus{
                 height: 100%;
@@ -167,7 +70,20 @@
                         }
                     }
                 }
-            }            
+            }
+            .azad-search-button{
+                display:flex;
+                align-items:center;
+                .toggle{
+                    border:none;
+                    background:none;
+                    padding:1rem;
+                    cursor:pointer;
+                    &:focus{
+                        outline: none;
+                    }
+                }
+            }           
         }
     }
     .mobile-menus{
@@ -176,10 +92,6 @@
 }
 
 @media only screen and (max-width: 767px), only screen and (max-device-width: 767px){
-
-    .preloader .inner .percentage {
-        font-size: 30vh;
-    }
 
     .azad-header{
         .header-container{
@@ -260,3 +172,33 @@
         }
     }
 }
+/*
+.no-js .show-no-js {
+	display: block !important;
+}
+
+.no-js .hide-no-js {
+	display: none !important;
+}
+.search-modal {
+    background: rgba(0, 0, 0, 0.2);
+    display: none;
+    opacity: 0;
+    position: fixed;
+    bottom: 0;
+    left: -9999rem;
+    top: 0;
+    transition: opacity 0.2s linear, left 0s 0.2s linear;
+    width: 100%;
+    z-index: 999;
+}
+.search-modal.active {
+    left: 0;
+    opacity: 1;
+    transition: opacity 0.2s linear;
+}
+.cover-modal.show-modal {
+    display: block;
+    cursor: pointer;
+}
+*/
