--- a/assets/sass/header/_header.scss
+++ b/assets/sass/header/_header.scss
@@ -172,14 +172,35 @@
         }
     }
 }
-/*
-.no-js .show-no-js {
-	display: block !important;
+
+/* Hiding and Showing ------------------------ */
+// .js .show-js {
+// 	display: block !important;
+// }
+
+// .js .hide-js {
+// 	display: none !important;
+// }
+
+// .no-js .show-no-js {
+// 	display: block !important;
+// }
+
+// .no-js .hide-no-js {
+// 	display: none !important;
+// }
+
+.cover-modal {
+	display: none;
+	-ms-overflow-style: none;
+	overflow: -moz-scrollbars-none;
 }
 
-.no-js .hide-no-js {
-	display: none !important;
+.cover-modal.show-modal {
+	display: block;
+	cursor: pointer;
 }
+
 .search-modal {
     background: rgba(0, 0, 0, 0.2);
     display: none;
@@ -197,8 +218,117 @@
     opacity: 1;
     transition: opacity 0.2s linear;
 }
-.cover-modal.show-modal {
-    display: block;
-    cursor: pointer;
+
+.search-modal.active .search-modal-inner {
+	box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.08);
+	transform: translateY(0);
+	transition: transform 0.25s ease-in-out, box-shadow 0.1s 0.25s linear;
 }
-*/
+.search-modal-inner {
+	background: #fff;
+	transform: translateY(-100%);
+	transition: transform 0.15s linear, box-shadow 0.15s linear;
+}
+.search-modal-inner .section-inner {
+	display: flex;
+	justify-content: space-between;
+	max-width: 168rem;
+}
+.section-inner {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 120rem;
+    width: calc(100% - 4rem);
+}
+
+.search-untoggle svg {
+	height: 1.5rem;
+	transition: transform 0.15s ease-in-out;
+	width: 1.5rem;
+}
+
+.search-untoggle:focus svg,
+.search-untoggle:hover svg {
+	transform: scale(1.15);
+}
+
+/* Modal Search Form ------------------------- */
+.search-modal form {
+	margin: 0;
+	position: relative;
+	width: 100%;
+}
+
+.search-modal .search-field {
+	background: none;
+	border: none;
+	border-radius: 0;
+	color: inherit;
+	font-size: 2rem;
+	letter-spacing: -0.0277em;
+	height: 8.4rem;
+	_margin: 0 0 0 -2rem;
+	_max-width: calc(100% + 2rem);
+	_padding: 0 0 0 2rem;
+	_width: calc(100% + 2rem);   
+	width: 100%;   
+}
+
+.search-modal .search-field {
+    border: none;
+    font-size: 3.2rem;
+    height: 14rem;
+}
+.search-modal .search-submit:focus {
+	right: 0;
+    border: 1px solid red !important;
+}
+.search-modal .search-submit {
+	position: absolute;
+	right: -9999rem;
+	top: 50%;
+	transform: translateY(-50%);
+}
+.search-modal .search-field::-moz-placeholder {
+	color: inherit;
+	line-height: 4;
+}
+.search-modal .search-field::-webkit-input-placeholder {
+	color: inherit;
+}
+
+.search-modal .search-field:-ms-input-placeholder {
+	color: inherit;
+}
+
+button.search-untoggle {
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    margin-right: -2.5rem;
+    padding: 0 2.5rem !important;
+}
+button.toggle {
+    background: none;
+    border: none;
+    box-shadow: none;
+    border-radius: 0;
+    font-size: inherit;
+    font-weight: 400;
+    letter-spacing: inherit;
+    padding: 0;
+    text-transform: none;
+}
+
+// NEW INFO
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+	display: none;
+}
+input[type="search"]:focus {
+	outline: thin dotted;
+	outline-offset: -4px;
+}
