--- a/assets/sass/header/_preloader.scss
+++ b/assets/sass/header/_preloader.scss
@@ -1,8 +1,8 @@
 // PRELOADER CSS
-.preloader{
-    position:fixed;
-    top:0;
-    left:0;
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
     margin: auto;
     width: 100vw;
     height: 100vh;
@@ -13,8 +13,8 @@
     transition: all 0.3s ease;
     transition-duration: 500ms;
     -webkit-transition-duration: 500ms;
-    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-    -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+    transition-timing-function: cubic-bezier( 0.86, 0, 0.07, 1 );
+    -webkit-transition-timing-function: cubic-bezier( 0.86, 0, 0.07, 1 );
     z-index: 99;
     transition-delay: 0.65s;
 }
@@ -24,8 +24,8 @@
   transition: all 0.3s ease;
   transition-duration: 500ms;
   -webkit-transition-duration: 500ms;
-  transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
-  -webkit-transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+  transition-timing-function: cubic-bezier( 0.86, 0, 0.07, 1 );
+  -webkit-transition-timing-function: cubic-bezier( 0.86, 0, 0.07, 1 );
 }
 .preloader:before {
   content: "";
@@ -74,19 +74,19 @@
   color: #fff;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY( -50% );
   text-align: center;
   opacity: 0.05;
   transition-delay: 0.1s;
 }
 
 .page-loaded.preloader {
-  left: calc(-100% - 200px);
+  left: calc( -100% - 200px );
   visibility: hidden;
 }
 
 .page-loaded.preloader .logo {
-  transform: translateX(-100px);
+  transform: translateX( -100px );
   opacity: 0;
 }
 
@@ -95,7 +95,8 @@
   opacity: 0;
 }
 
-@media only screen and (max-width: 767px), only screen and (max-device-width: 767px){
+@media only screen and ( max-width: 767px ),
+only screen and ( max-device-width: 767px ) {
     .preloader .inner .percentage {
         font-size: 30vh;
     }
