--- a/assets/sass/footer/_footer.scss
+++ b/assets/sass/footer/_footer.scss
@@ -8,26 +8,34 @@
         .footer-container {
             display: flex;
             flex-direction: row;
-            .footer-widget-1, .footer-widget-2, .footer-widget-3 {
+            
+            .footer-widget-1,
+            .footer-widget-2,
+            .footer-widget-3 {
                 width: 100%;
                 text-align: left;
                 h3 {
                     margin-bottom: 1rem;
                 }
             }
+
             .footer-widget-1 {
                 text-align: left;
             }
+
             .footer-widget-2 {
                 text-align: left;
             }
         }
     }
+
     .azad-copyright {
         padding: 1rem 0;
         background: var( --text );
+
         .copyright-container {
             overflow: overlay;
+
             p {
                 margin: 0;
             }
@@ -37,8 +45,10 @@
 
 @media only screen and ( max-width: 767px ),
 only screen and ( max-device-width: 767px ) {
+
     .azad-footer {
         .footer-top {
+            
             .footer-container {
                 display: flex;
                 flex-direction: column;
