--- a/assets/src/sass/footer/_footer.scss
+++ b/assets/src/sass/footer/_footer.scss
@@ -4,30 +4,11 @@
     color: var( --white );
     padding: 5rem 0 0;
 
-    .footer-top {
-        padding: 0 0 5rem;
-        .footer-container {
-            display: flex;
-            flex-direction: row;
-            
-            .footer-widget-1,
-            .footer-widget-2,
-            .footer-widget-3 {
-                width: 100%;
-                text-align: left;
-                h3 {
-                    margin-bottom: 1rem;
-                }
-            }
-
-            .footer-widget-1 {
-                text-align: left;
-            }
-
-            .footer-widget-2 {
-                text-align: left;
-            }
-        }
+    .footer-top-container {
+        display: grid;
+        grid-gap: 5rem;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        padding: 2rem 0 2rem;
     }
 
     .azad-copyright {
@@ -48,17 +29,10 @@
 only screen and ( max-device-width: 767px ) {
 
     .azad-footer {
-        .footer-top {
-            
-            .footer-container {
-                display: flex;
-                flex-direction: column;
-
-                .footer-widget-2,
-                .footer-widget-3 {
-                    margin-top: 2rem;
-                }
-            }
+        .footer-top-container {
+            grid-gap: 1rem;
+            grid-template-columns: 1fr;
+            padding: 4rem 0 0rem;
         }
     }
 }
