--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ Tags: two-columns, right-sidebar, custom-header, custom-colors, custom-backgroun
 License: GPL2
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: azad-lite
-Domain Path: /languages
+Domain Path: /lang
 *-------------------------------------------------------------------------------------------
 */
 
